--- a/Group Chat Java Socket Application Caurce Work/src/ClientForm.fxml
+++ b/Group Chat Java Socket Application Caurce Work/src/ClientForm.fxml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextArea?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="ClientFormController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientFormController">
+   <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2c3e50" height="54.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="601.0" />
+      <AnchorPane layoutY="356.0" prefHeight="65.0" prefWidth="601.0" style="-fx-background-color: #34495e;">
+         <children>
+            <JFXTextField fx:id="txtMessage" layoutX="16.0" layoutY="12.0" prefHeight="36.0" prefWidth="444.0" style="-fx-background-color: #bdc3c7; -fx-background-radius: 0.5em;" />
+            <JFXButton layoutX="476.0" layoutY="12.0" onAction="#btnSendOnAction" prefHeight="36.0" prefWidth="111.0" style="-fx-background-color: #16a085; -fx-background-radius: 2.0em;" text="Send" />
+         </children>
+      </AnchorPane>
+      <Label layoutX="14.0" layoutY="9.0" text="Client Softare" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="25.0" />
+         </font>
+      </Label>
+      <JFXTextArea fx:id="textArea" focusColor="#405aa800" layoutX="4.0" layoutY="56.0" prefHeight="298.0" prefWidth="594.0" style="-fx-background-radius: 1.0em; -fx-background-color: #bdc3c7;" unFocusColor="#4d4d4d00" />
+   </children>
 </AnchorPane>
