--- a/Group Chat Java Socket Application Caurce Work/src/lk/ijse/chatApplication/LogForm.fxml
+++ b/Group Chat Java Socket Application Caurce Work/src/lk/ijse/chatApplication/LogForm.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.chatApplication.ClientLogFormController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.chatApplication.LogFormController">
    <children>
       <JFXTextField fx:id="txtUserName" layoutX="116.0" layoutY="176.0" />
       <JFXButton layoutX="336.0" layoutY="185.0" onAction="#btnLogOnAction" text="Log In" />
