--- a/Group Chat Java Socket Application Caurce Work/src/lk/ijse/chatApplication/view/LogForm.fxml
+++ b/Group Chat Java Socket Application Caurce Work/src/lk/ijse/chatApplication/view/LogForm.fxml
@@ -4,8 +4,7 @@
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.chatApplication.LogFormController">
+<AnchorPane fx:id="loginFormContext" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.chatApplication.controllers.LogFormController">
    <children>
       <JFXTextField fx:id="txtUserName" layoutX="116.0" layoutY="176.0" />
       <JFXButton layoutX="336.0" layoutY="185.0" onAction="#btnLogOnAction" text="Log In" />
